# n8nmermaid

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yml  Dockerfile  README.md  docker-compose.yml  output.md  pyproject.toml  ruff.toml
.agents/skills/s-n8nmermaid-update-check/n8nmermaid-update-check/: SKILL.md
.agents/skills/s-n8nmermaid-update-check/n8nmermaid-update-check/scripts/: fetch_versions.py
example/: example.json  example2.json  example3.json  example4.json  example5.json  example6.json
scripts/: README.md  analyze_n8n_workflow_examples.py  run_cli_mermaid_tests.sh  run_cli_report_tests.sh  run_get_analyzed_jsons.sh
src/n8nmermaid/api/: README.md  __init__.py  helpers.py  main.py  schemas.py
src/n8nmermaid/api/routers/: __init__.py  mermaid.py  report.py
src/n8nmermaid/cli/: README.md  __init__.py  commands.py  enums.py  helpers.py  main.py
src/n8nmermaid/core/: orchestrator_v2.py
src/n8nmermaid/core/analyzer_v2/: __init__.py  constants.py  models.py  phase_1_initial_parse.py  phase_2_connection_mapping.py  phase_3_cluster_analysis.py  phase_4_node_classification.py  phase_5_parameter_extraction.py  phase_6_parameter_categorization.py
src/n8nmermaid/core/generators/mermaid_v2/: __init__.py  connection_definitions.py  constants.py  generator.py  helpers.py  node_definitions.py
src/n8nmermaid/core/generators/reports_v2/: __init__.py  formatters.py  generator.py  models.py  report_agents.py  report_credentials.py  (+2 more)
src/n8nmermaid/models_v2/: __init__.py  request_v2_models.py
src/n8nmermaid/utils/: loaders.py  logging.py
